# GVoice

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: config.example.yaml  config.genshin.example.yaml  config.yaml
docs/: cli-debugging.md  cosyvoice3.md  genshin-vits.md  research.md  speaker-cloning.md
examples/: smoke_tts.py  ws_client.py
sidecars/cosyvoice3/: .gitignore  README.md  pyproject.toml  setup.ps1
sidecars/cosyvoice3/configs/: config.example.yaml
sidecars/cosyvoice3/src/cosyvoice3_sidecar/: cli.py  config.py  engine.py  server.py
src/gvoice/: __init__.py  cli.py  config.py  cosyvoice3.py  download.py  engine.py  server.py  speakers.py
tests/: test_cosyvoice3.py  test_engine.py  test_server.py  test_speakers.py
tools/: export_genshin_vits_onnx.py
