[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gvoice"
version = "0.1.0"
description = "CPU-friendly streaming Chinese text-to-speech service"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "GVoice contributors" },
]
keywords = ["tts", "text-to-speech", "chinese", "onnx", "streaming-audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "cn2an",
    "jieba",
    "numpy<2",
    "onnxruntime>=1.22",
    "pypinyin",
    "soundfile",
    "sherpa-onnx",
    "tqdm",
    "Unidecode",
    "pyyaml",
    "websockets>=12",
]

[project.optional-dependencies]
dev = ["pytest", "websockets>=12", "ruff>=0.12", "mypy>=1.16", "pip-audit>=2.9"]
export = ["librosa", "numba", "onnx", "onnxscript", "torch"]

[project.scripts]
gvoice = "gvoice.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120

[tool.mypy]
files = ["src/gvoice/config.py", "src/gvoice/speakers.py", "src/gvoice/download.py"]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
follow_imports = "skip"
